# Speccell

./: CHANGELOG.md  Main.hs  README.md  Speccell.cabal  test.rom
src/: Audio.hs  CPU.hs  Config.hs  Frame.hs  Frontend.hs  Init.hs  Input.hs  Machine.hs  Video.hs
src/Machine/: CPU.hs  CPUFlags.hs  Run.hs
test/: CPUTests.hs  Speccell-test.hs  TestUtils.hs
